exports[`test should mount an open modal 1`] = `
<Modal
  ariaLabel="test modal"
  classNameModal={null}
  classNameOverlay={null}
  closeOnEsc={true}
  closeOnOutsideClick={true}
  isFullscreen={false}
  isOpened={true}
  openByClickOn={null}
  role="dialog">
  <Portal
    closeOnEsc={true}
    closeOnOutsideClick={true}
    isOpened={true}
    onClose={[Function]}
    onOpen={[Function]}
    onUpdate={[Function]}
    openByClickOn={null} />
</Modal>
`;

exports[`test should render an open modal 1`] = `null`;

exports[`test should shallow an open modal 1`] = `
<Portal
  closeOnEsc={true}
  closeOnOutsideClick={true}
  isOpened={true}
  onClose={[Function]}
  onOpen={[Function]}
  onUpdate={[Function]}
  openByClickOn={null}>
  <ModalContent
    ariaLabel="test modal"
    classNameModal="terra-Modal"
    classNameOverlay="terra-Modal-overlay"
    closeOnOutsideClick={true}
    role="dialog">
    <div>
      IsOpened
      <button>
        focusable button
      </button>
    </div>
  </ModalContent>
</Portal>
`;
